--- a/assets/scss/mobile/_mixins.scss
+++ b/assets/scss/mobile/_mixins.scss
@@ -360,14 +360,18 @@
 }
 
 // CSS3 webkit flexbox
+@mixin flexible($flex: 1) {
+	width: 0;
+	-webkit-box-flex: $flex;
+}
+
 @mixin flex-box($orient: vertical, $direction: normal, $pack: center, $align: center) {
 	display: -webkit-box;
 	-webkit-box-orient: $orient;	
 	-webkit-box-direction: $direction;
 	-webkit-box-pack: $pack;
 	-webkit-box-align: $align;
-}
-
-@mixin flexible($flex: 1) {
-	-webkit-box-flex: $flex;
+	> .flexible {
+		@include flexible();
+	}
 }
