--- a/assets/scss/mobile/_type.scss
+++ b/assets/scss/mobile/_type.scss
@@ -31,3 +31,7 @@ h3 {
 h4, h5, h6 {
 	font-size: $fontSizeMini;
 }
+
+.text-left           { text-align: left; }
+.text-right          { text-align: right; }
+.text-center         { text-align: center; }
